--- a/Changes.txt
+++ b/Changes.txt
@@ -21,3 +21,6 @@ test.cpp				三位数反转
 test3.cpp				使用了两种方法，一种是普通的搜素；另一种是从中间向两端扩展的方法。
 ===============================================================================================================================================
 range/bubble_sort.cpp			冒泡排序的实现
+===============================================================================================================================================
+test4.cpp				把n!输出成素因子的乘积	
+test5.cpp				果园里的树问题，三角形内的整数点数目
