--- a/Changes.txt
+++ b/Changes.txt
@@ -24,3 +24,8 @@ range/bubble_sort.cpp			冒泡排序的实现
 ===============================================================================================================================================
 test4.cpp				把n!输出成素因子的乘积	
 test5.cpp				果园里的树问题，三角形内的整数点数目
+===============================================================================================================================================
+dijkstra.cpp				迪阶斯特拉算法
+input.txt是输入数据
+===============================================================================================================================================
+10055_warrior.c				10055问题
